# smpl_tkinter

./: README.md  pyproject.toml
docs/: smpl.drawio.xml
