[tool.poetry]
name = "smpl-tkinter"
version = "0.1.0"
description = "Simple cross-platform desktop invoicing application"
authors = ["Mykhailo Shpilienko <m.shpilenko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
mypy = "^0.931"
customtkinter = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
