[tool.poetry]
name = "smpl-tkinter"
version = "0.1.0"
description = "Simple cross-platform desktop invoicing application"
authors = ["Mykhailo Shpilienko <m.shpilenko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.0.0"
customtkinter = "^5.2.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8-pyproject = "^1.2.3"
pytest = "^7.1.2"
mypy = "^0.931"

[tool.flake8]
max-line-length = 88
ignore = ["E203", "E266", "E501", "E701"]
exclude = ["tests/*", "docs/*"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
